<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.healthzone.HealthzoneFragment">

    <!-- ScrollView to make the content scrollable -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- ConstraintLayout to contain all your views -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/ibtnHome"
                android:layout_width="64dp"
                android:layout_height="58dp"
                android:layout_marginTop="140dp"
                android:backgroundTint="@color/lightblue"
                android:scaleType="fitCenter"
                android:src="@drawable/home"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtAppName"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="Dentist Diary"
                android:textAlignment="center"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.698"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iLogo"
                android:layout_width="158dp"
                android:layout_height="201dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- WebView for flossing content -->
            <WebView
                android:id="@+id/wvFloss"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/iLogo"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/txtFloss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wvFloss"
                android:gravity="center"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/wvFloss"
                android:layout_marginBottom="16dp" />

            <!-- WebView for dental trouble content -->
            <WebView
                android:id="@+id/wvDentalTrouble"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/txtFloss"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/txtDentalTrouble"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wvDentalTrouble"
                android:gravity="center"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/wvDentalTrouble"
                android:layout_marginBottom="16dp" />

            <!-- WebView for x-rays content -->
            <WebView
                android:id="@+id/wvXrays"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/txtDentalTrouble"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/txtXrays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wvXrays"
                android:gravity="center"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/wvXrays"
                android:layout_marginBottom="16dp" />

            <!-- WebView for fillings content -->
            <WebView
                android:id="@+id/wvFillings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/txtXrays"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/txtFilling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wvFillings"
                android:gravity="center"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/wvFillings"
                android:layout_marginBottom="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>
